syntax = "proto3";

message Request{
  Context context = 1;
  string browseId = 2;
}
message  Context{
  AdSignalsInfo adSignalsInfo = 9;
}
message AdSignalsInfo{
  repeated Params params = 1;
}
message  Params{
  string key = 1;
  string value = 2;
}

message RequestDownloadAction{
  string videoId = 8;
}

message RequestPlayer{
  Context context = 1;
  string videoId = 2;
  p1F4 p1F4 = 4;
  uint32 p1F8 = 8;
}
message p1F4{
  p4F1 p4F1 = 1;
}
message p4F1{
  uint32 f5 = 5;
  uint32 f7 = 7;
  uint32 f8 = 8;
  uint32 f11 = 11;
  string f12 = 12;
  uint32 f29 = 29;
  uint32 f44 = 44;
}
