syntax = "proto3";
package youtube.request.player;
import "request/common.proto";

message RequestPlayer{
  youtube.request.common.Context context = 1;
  string videoId = 2;
  OfflineParam offlineParam = 4;
  uint32 p1F8 = 8;
}
message OfflineParam{
  OfflineVideoParam offlineVideoParam = 1;
}
message OfflineVideoParam{
  uint32 f5 = 5;
  uint32 f7 = 7;
  uint32 f8 = 8;
  uint32 f11 = 11;
  string f12 = 12;
  uint32 f29 = 29;
  uint32 f44 = 44;
}
    